Minor execution update

--- a/nbs/2-basic-data-types.ipynb
+++ b/nbs/2-basic-data-types.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://localhost:8002/api/events/'"
+       "'http://localhost:8002/api/events/12'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import requests\n",
-    "path = \"/api/events/\"\n",
+    "path = \"/api/events/12\"\n",
     "base_url = \"http://localhost:8002\" # 127.0.0.1\n",
     "endpoint = f\"{base_url}{path}\"\n",
     "endpoint"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'results': [1, 2, 3]} <class 'dict'> None\n"
+      "{'id': 12} <class 'dict'> None\n"
      ]
     }
    ],
