8 - Incoming Data Validation with Pydantic Schemas

--- a/nbs/4-send-data-to-the-api.ipynb
+++ b/nbs/4-send-data-to-the-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'http://localhost:8002/api/events/'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "'{\"page\": \"/test+\"}'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,16 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Wed, 19 Mar 2025 20:40:49 GMT', 'server': 'uvicorn', 'content-length': '21', 'content-type': 'text/plain; charset=utf-8'}\n",
-      "ok False\n",
-      "Internal Server Error\n"
+      "{'date': 'Wed, 19 Mar 2025 20:51:52 GMT', 'server': 'uvicorn', 'content-length': '10', 'content-type': 'application/json'}\n",
+      "ok True\n",
+      "{'id': 123} <class 'dict'> None\n"
      ]
     }
    ],
@@ -75,6 +75,35 @@
     "    \"Content-Type\": \"application/json\"\n",
     "}\n",
     "response = requests.post(endpoint, data=json.dumps(data), headers=headers) # HTTP POST\n",
+    "print(response.headers)\n",
+    "print('ok', response.ok)\n",
+    "if response.ok:\n",
+    "    data = response.json()\n",
+    "    print(data, type(data), data.get('items'))\n",
+    "else:\n",
+    "    print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'date': 'Wed, 19 Mar 2025 20:51:40 GMT', 'server': 'uvicorn', 'content-length': '9', 'content-type': 'application/json'}\n",
+      "ok True\n",
+      "{'id': 12} <class 'dict'> None\n"
+     ]
+    }
+   ],
+   "source": [
+    "detail_path = \"/api/events/12/\"\n",
+    "detail_endpoint = f\"{base_url}{detail_path}\"\n",
+    "\n",
+    "response = requests.put(detail_endpoint, json={\"description\": \"hello world\"}) # HTTP PUT\n",
     "print(response.headers)\n",
     "print('ok', response.ok)\n",
     "if response.ok:\n",
