--- a/nbs/4-send-data-to-the-api.ipynb
+++ b/nbs/4-send-data-to-the-api.ipynb
@@ -2,79 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://localhost:8002/api/events/'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "path = \"/api/events/\"\n",
-    "base_url = \"http://localhost:8002\" # 127.0.0.1\n",
-    "endpoint = f\"{base_url}{path}\"\n",
-    "endpoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {\"page\": \"/test+\"}"
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"page\": \"/test+\"}'"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import json\n",
-    "\n",
-    "json.dumps(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Wed, 19 Mar 2025 20:51:52 GMT', 'server': 'uvicorn', 'content-length': '10', 'content-type': 'application/json'}\n",
+      "{'date': 'Wed, 19 Mar 2025 21:14:18 GMT', 'server': 'uvicorn', 'content-length': '46', 'content-type': 'application/json'}\n",
       "ok True\n",
-      "{'id': 123} <class 'dict'> None\n"
+      "{'id': 123, 'page': '/test+', 'description': '123'} <class 'dict'> None\n"
      ]
     }
    ],
    "source": [
-    "headers = {\n",
-    "    \"Content-Type\": \"application/json\"\n",
-    "}\n",
-    "response = requests.post(endpoint, data=json.dumps(data), headers=headers) # HTTP POST\n",
+    "path = \"/api/events/\"\n",
+    "base_url = \"http://localhost:8002\" # 127.0.0.1\n",
+    "create_endpoint = f\"{base_url}{path}\"\n",
+    "\n",
+    "response = requests.post(create_endpoint, json={\"page\": \"/test+\"}) # HTTP POST\n",
     "print(response.headers)\n",
     "print('ok', response.ok)\n",
     "if response.ok:\n",
@@ -86,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Wed, 19 Mar 2025 20:51:40 GMT', 'server': 'uvicorn', 'content-length': '9', 'content-type': 'application/json'}\n",
+      "{'date': 'Wed, 19 Mar 2025 21:13:15 GMT', 'server': 'uvicorn', 'content-length': '53', 'content-type': 'application/json'}\n",
       "ok True\n",
-      "{'id': 12} <class 'dict'> None\n"
+      "{'id': 12, 'page': '', 'description': 'hello world adfas'} <class 'dict'> None\n"
      ]
     }
    ],
@@ -103,7 +58,7 @@
     "detail_path = \"/api/events/12/\"\n",
     "detail_endpoint = f\"{base_url}{detail_path}\"\n",
     "\n",
-    "response = requests.put(detail_endpoint, json={\"description\": \"hello world\"}) # HTTP PUT\n",
+    "response = requests.put(detail_endpoint, json={\"description\": \"hello world adfas\"}) # HTTP PUT\n",
     "print(response.headers)\n",
     "print('ok', response.ok)\n",
     "if response.ok:\n",
@@ -112,6 +67,13 @@
     "else:\n",
     "    print(response.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
