--- a/nbs/4-send-data-to-the-api.ipynb
+++ b/nbs/4-send-data-to-the-api.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Wed, 19 Mar 2025 21:14:18 GMT', 'server': 'uvicorn', 'content-length': '46', 'content-type': 'application/json'}\n",
+      "{'date': 'Wed, 19 Mar 2025 21:14:56 GMT', 'server': 'uvicorn', 'content-length': '46', 'content-type': 'application/json'}\n",
       "ok True\n",
       "{'id': 123, 'page': '/test+', 'description': '123'} <class 'dict'> None\n"
      ]
@@ -29,7 +29,7 @@
     "base_url = \"http://localhost:8002\" # 127.0.0.1\n",
     "create_endpoint = f\"{base_url}{path}\"\n",
     "\n",
-    "response = requests.post(create_endpoint, json={\"page\": \"/test+\"}) # HTTP POST\n",
+    "response = requests.post(create_endpoint, json={\"page\": \"/test+\", \"description\": '123'}) # HTTP POST\n",
     "print(response.headers)\n",
     "print('ok', response.ok)\n",
     "if response.ok:\n",
