8 - Store Data using SQLModel Sessions

--- a/nbs/4-send-data-to-the-api.ipynb
+++ b/nbs/4-send-data-to-the-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Wed, 19 Mar 2025 21:14:56 GMT', 'server': 'uvicorn', 'content-length': '46', 'content-type': 'application/json'}\n",
+      "{'date': 'Thu, 20 Mar 2025 18:00:58 GMT', 'server': 'uvicorn', 'content-length': '44', 'content-type': 'application/json'}\n",
       "ok True\n",
-      "{'id': 123, 'page': '/test+', 'description': '123'} <class 'dict'> None\n"
+      "{'page': '/test+', 'description': '123', 'id': 3} <class 'dict'> None\n"
      ]
     }
    ],
