9 - SQLModel Query for List View

--- a/nbs/3-list-data-types.ipynb
+++ b/nbs/3-list-data-types.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -11,13 +11,14 @@
        "'http://localhost:8002/api/events'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import requests\n",
+    "from pprint import pprint\n",
     "path = \"/api/events\"\n",
     "base_url = \"http://localhost:8002\" # 127.0.0.1\n",
     "endpoint = f\"{base_url}{path}\"\n",
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +35,17 @@
      "output_type": "stream",
      "text": [
       "ok True\n",
-      "{'results': [{'id': 1}, {'id': 2}, {'id': 3}], 'count': 3} <class 'dict'> None\n"
+      "{'count': 10,\n",
+      " 'results': [{'description': '123', 'id': 1, 'page': '/test+'},\n",
+      "             {'description': '123', 'id': 2, 'page': '/test+'},\n",
+      "             {'description': '123', 'id': 3, 'page': '/test+'},\n",
+      "             {'description': '123', 'id': 4, 'page': '/test+'},\n",
+      "             {'description': '123', 'id': 5, 'page': '/test+'},\n",
+      "             {'description': '123', 'id': 6, 'page': '/test+'},\n",
+      "             {'description': '123', 'id': 7, 'page': '/test+'},\n",
+      "             {'description': '123', 'id': 8, 'page': '/test+'},\n",
+      "             {'description': '123', 'id': 9, 'page': '/test+'},\n",
+      "             {'description': '123', 'id': 10, 'page': '/test+'}]}\n"
      ]
     }
    ],
@@ -43,7 +54,7 @@
     "print('ok', response.ok)\n",
     "if response.ok:\n",
     "    data = response.json()\n",
-    "    print(data, type(data), data.get('items'))"
+    "    pprint(data)"
    ]
   },
   {
