13 - Updated At Timestamp Field

--- a/nbs/3-list-data-types.ipynb
+++ b/nbs/3-list-data-types.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'http://localhost:8002/api/events'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -35,17 +35,27 @@
      "output_type": "stream",
      "text": [
       "ok True\n",
-      "{'count': 10,\n",
-      " 'results': [{'description': '123', 'id': 1, 'page': '/test+'},\n",
-      "             {'description': '123', 'id': 2, 'page': '/test+'},\n",
-      "             {'description': '123', 'id': 3, 'page': '/test+'},\n",
-      "             {'description': '123', 'id': 4, 'page': '/test+'},\n",
-      "             {'description': '123', 'id': 5, 'page': '/test+'},\n",
-      "             {'description': '123', 'id': 6, 'page': '/test+'},\n",
-      "             {'description': '123', 'id': 7, 'page': '/test+'},\n",
-      "             {'description': '123', 'id': 8, 'page': '/test+'},\n",
-      "             {'description': '123', 'id': 9, 'page': '/test+'},\n",
-      "             {'description': '123', 'id': 10, 'page': '/test+'}]}\n"
+      "{'count': 4,\n",
+      " 'results': [{'created_at': '2025-03-20T18:50:52.223968Z',\n",
+      "              'description': '123',\n",
+      "              'id': 2,\n",
+      "              'page': '/test+',\n",
+      "              'updated_at': '2025-03-20T18:50:52.223972Z'},\n",
+      "             {'created_at': '2025-03-20T18:50:53.535077Z',\n",
+      "              'description': '123',\n",
+      "              'id': 3,\n",
+      "              'page': '/test+',\n",
+      "              'updated_at': '2025-03-20T18:50:53.535084Z'},\n",
+      "             {'created_at': '2025-03-20T18:50:56.415756Z',\n",
+      "              'description': '123',\n",
+      "              'id': 4,\n",
+      "              'page': '/test+',\n",
+      "              'updated_at': '2025-03-20T18:50:56.415762Z'},\n",
+      "             {'created_at': '2025-03-20T18:49:40.867441Z',\n",
+      "              'description': 'inline test',\n",
+      "              'id': 1,\n",
+      "              'page': '/test+',\n",
+      "              'updated_at': '2025-03-20T18:50:56.744864Z'}]}\n"
      ]
     }
    ],
@@ -59,10 +69,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok 404\n"
+     ]
+    }
+   ],
+   "source": [
+    "detail_path = \"/api/events/12\"\n",
+    "detail_endpoint = f\"{base_url}{detail_path}\"\n",
+    "r = requests.get(detail_endpoint)\n",
+    "print('ok', r.status_code)\n",
+    "if r.ok:\n",
+    "    data = r.json()\n",
+    "    pprint(data)"
+   ]
   },
   {
    "cell_type": "code",
