--- a/nbs/4-send-data-to-the-api.ipynb
+++ b/nbs/4-send-data-to-the-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Thu, 20 Mar 2025 18:16:26 GMT', 'server': 'uvicorn', 'content-length': '45', 'content-type': 'application/json'}\n",
+      "{'date': 'Thu, 20 Mar 2025 18:50:55 GMT', 'server': 'uvicorn', 'content-length': '130', 'content-type': 'application/json'}\n",
       "ok True\n",
-      "{'page': '/test+', 'description': '123', 'id': 12} <class 'dict'> None\n"
+      "{'created_at': '2025-03-20T18:50:56.415756Z', 'id': 4, 'page': '/test+', 'description': '123', 'updated_at': '2025-03-20T18:50:56.415762Z'} <class 'dict'> None\n"
      ]
     }
    ],
@@ -41,26 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Wed, 19 Mar 2025 21:13:15 GMT', 'server': 'uvicorn', 'content-length': '53', 'content-type': 'application/json'}\n",
-      "ok True\n",
-      "{'id': 12, 'page': '', 'description': 'hello world adfas'} <class 'dict'> None\n"
+      "{'date': 'Thu, 20 Mar 2025 18:50:55 GMT', 'server': 'uvicorn', 'content-length': '138', 'content-type': 'application/json'}\n",
+      "ok 200\n",
+      "{'created_at': '2025-03-20T18:49:40.867441Z', 'id': 1, 'page': '/test+', 'description': 'inline test', 'updated_at': '2025-03-20T18:50:56.744864Z'} <class 'dict'> None\n"
      ]
     }
    ],
    "source": [
-    "detail_path = \"/api/events/12/\"\n",
+    "detail_path = \"/api/events/1/\"\n",
     "detail_endpoint = f\"{base_url}{detail_path}\"\n",
     "\n",
-    "response = requests.put(detail_endpoint, json={\"description\": \"hello world adfas\"}) # HTTP PUT\n",
+    "response = requests.put(detail_endpoint, json={\"description\": \"inline test\"}) # HTTP PUT\n",
     "print(response.headers)\n",
-    "print('ok', response.ok)\n",
+    "print('ok', response.status_code)\n",
     "if response.ok:\n",
     "    data = response.json()\n",
     "    print(data, type(data), data.get('items'))\n",
