--- a/nbs/5-sqlmodel-queries.ipynb
+++ b/nbs/5-sqlmodel-queries.ipynb
@@ -64,7 +64,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from timescaledb.hyperfunctions import time_bucket\n",
+    "\n",
+    "with Session(engine) as session:\n",
+    "    bucket = time_bucket(\"1 day\", EventModel.time)\n",
+    "    query = (\n",
+    "        select(\n",
+    "            bucket,\n",
+    "            EventModel.page\n",
+    "            \n",
+    "        )\n",
+    "        .order_by(EventModel.updated_at.asc())\n",
+    "    )\n",
+    "    compiled_query = query.compile(compile_kwargs={\"literal_binds\": True})\n",
+    "    print(compiled_query)\n",
+    "    print(\"\")\n",
+    "    print(str(query))"
+   ]
   }
  ],
  "metadata": {
