Auto create events

--- a/nbs/4-send-data-to-the-api.ipynb
+++ b/nbs/4-send-data-to-the-api.ipynb
@@ -73,7 +73,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "events = 10_000\n",
+    "pages = ['/about', '/contact', '/pages', '/pricing', 'pricing']\n",
+    "\n",
+    "path = \"/api/events/\"\n",
+    "base_url = \"http://localhost:8002\" # 127.0.0.1\n",
+    "create_endpoint = f\"{base_url}{path}\"\n",
+    "\n",
+    "for i in range(events):\n",
+    "    page = random.choice(pages)\n",
+    "    response = requests.post(create_endpoint, json={\"page\": page}) # HTTP POST\n",
+    "    if response.ok:\n",
+    "        data = response.json()\n",
+    "        print(data)"
+   ]
   },
   {
    "cell_type": "code",
