--- a/nbs/3-list-data-types.ipynb
+++ b/nbs/3-list-data-types.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'http://localhost:8002/api/events'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -35,32 +35,14 @@
      "output_type": "stream",
      "text": [
       "ok True\n",
-      "{'count': 4,\n",
-      " 'results': [{'created_at': '2025-03-20T18:50:52.223968Z',\n",
-      "              'description': '123',\n",
-      "              'id': 2,\n",
-      "              'page': '/test+',\n",
-      "              'updated_at': '2025-03-20T18:50:52.223972Z'},\n",
-      "             {'created_at': '2025-03-20T18:50:53.535077Z',\n",
-      "              'description': '123',\n",
-      "              'id': 3,\n",
-      "              'page': '/test+',\n",
-      "              'updated_at': '2025-03-20T18:50:53.535084Z'},\n",
-      "             {'created_at': '2025-03-20T18:50:56.415756Z',\n",
-      "              'description': '123',\n",
-      "              'id': 4,\n",
-      "              'page': '/test+',\n",
-      "              'updated_at': '2025-03-20T18:50:56.415762Z'},\n",
-      "             {'created_at': '2025-03-20T18:49:40.867441Z',\n",
-      "              'description': 'inline test',\n",
-      "              'id': 1,\n",
-      "              'page': '/test+',\n",
-      "              'updated_at': '2025-03-20T18:50:56.744864Z'}]}\n"
+      "[{'bucket': '2025-03-17T00:00:00Z', 'count': 938, 'page': '/about'},\n",
+      " {'bucket': '2025-03-17T00:00:00Z', 'count': 1042, 'page': '/contact'},\n",
+      " {'bucket': '2025-03-17T00:00:00Z', 'count': 1005, 'page': '/pricing'}]\n"
      ]
     }
    ],
    "source": [
-    "response = requests.get(endpoint)\n",
+    "response = requests.get(endpoint, params={'duration': '1 week', 'pages': []})\n",
     "print('ok', response.ok)\n",
     "if response.ok:\n",
     "    data = response.json()\n",
