9 - Web Traffic Data and More Aggregations

--- a/nbs/4-send-data-to-the-api.ipynb
+++ b/nbs/4-send-data-to-the-api.ipynb
@@ -92,17 +92,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: faker in /Users/cfe/Dev/analytics-api/venv/lib/python3.13/site-packages (37.0.2)\n",
+      "Requirement already satisfied: tzdata in /Users/cfe/Dev/analytics-api/venv/lib/python3.13/site-packages (from faker) (2025.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install faker"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from faker import Faker\n",
+    "import random\n",
+    "events = 10_000\n",
+    "pages = [\n",
+    "        \"/\", \"/about\", \"/pricing\", \"/contact\", \n",
+    "        \"/blog\", \"/products\", \"/login\", \"/signup\",\n",
+    "        \"/dashboard\", \"/settings\"\n",
+    "    ]\n",
+    "fake = Faker()\n",
+    "session_ids = [fake.uuid4() for _ in range(20)]\n",
+    "path = \"/api/events/\"\n",
+    "base_url = \"http://localhost:8002\" # 127.0.0.1\n",
+    "create_endpoint = f\"{base_url}{path}\"\n",
+    "referrers = [\n",
+    "    \"https://google.com\",\n",
+    "    \"https://facebook.com\",\n",
+    "    \"https://twitter.com\",\n",
+    "    \"https://linkedin.com\",\n",
+    "    \"\",  # direct traffic\n",
+    "    \"https://github.com\"\n",
+    "]\n",
+    "\n",
+    "for i in range(events):\n",
+    "    page = random.choice(pages)\n",
+    "    user_agent = random.choice([\n",
+    "            fake.chrome,\n",
+    "            fake.firefox,\n",
+    "            fake.safari,\n",
+    "            fake.opera,\n",
+    "            fake.user_agent\n",
+    "        ])()\n",
+    "    payload = dict(\n",
+    "        page=random.choice(pages),\n",
+    "        user_agent=user_agent,\n",
+    "        ip_address=fake.ipv4(),\n",
+    "        referrer=random.choice(referrers),\n",
+    "        session_id=random.choice(session_ids),\n",
+    "        duration=random.randint(1, 300)  # Between 5 and 300 seconds\n",
+    "    )\n",
+    "    response = requests.post(create_endpoint, json=payload) # HTTP POST\n",
+    "    if response.ok:\n",
+    "        data = response.json()\n",
+    "        print(data)"
+   ]
   }
  ],
  "metadata": {
